Improve the maven changelog entry.